--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Check for vulnerable dependencies
       run: |
         pip install safety
-        safety check
+        safety scan
 
     - name: Run Bandit Security Scan
       run: bandit -r . -c pyproject.toml -ll
